# ozds

./: .dvcignore  .editorconfig  .gitattributes  .gitignore  .markdown-link-check.json  .prettierignore  .prettierrc.yaml  .sql-formatter.json  .sqls.yaml  CHANGELOG.md  Directory.Build.props  Directory.Packages.props  Doxyfile  Mess.Ozds.sln  README.md  cspell.yaml  deps.nix  docker-compose.yml  flake.nix  global.json  justfile  omnisharp.json  ozds.sln  pyproject.toml  rnr-2024-04-11_111425.json  rnr-2024-06-28_064325.json  rnr-2024-06-28_064346.json
.config/: dotnet-tools.json
.dvc/: config
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: check.yml  deploy.yml  docs.yml  format-and-deps.yml  main_altibiz-mess.yml
.helix/: languages.toml
App_Data/: tenants.json
Ozds.Blazor/: Ozds.Blazor.csproj  Program.cs  Startup.cs  _Imports.razor
Ozds.Blazor/Models/: ChatMessage.cs  ChatUser.cs
Ozds.Blazor/Pages/: _Host.cshtml
Ozds.Blazor/Theme/: MudBlazorAdminDashboard.cs
Ozds.Web/: Ozds.Web.csproj
Ozds.Web/Pages/: App.cshtml  Index.cshtml  Weather.cshtml
Ozds.Web/Recipes/: ozds.recipe.json
assets/: .gitignore  Calculation4.sql.dvc  Calculation5-orchard.sql.dvc  Calculation7.sql.dvc  Calculation8.sql.dvc  current-orchard.sql.dvc  current-timescale.sql  current.sql.dvc
docs/: Doxyfile  DoxygenLayout.xml  doxygen-awesome.css  footer.html  header.html  index.html  index.md  plantuml.cfg  schema.md  scripts.md
scripts/: isready.nu  push.nu  rewind.nu  rollback.nu  stress.nu  wait-services.nu
src/: Directory.Build.props
test/: Directory.Build.props
(+3167 files in other folders)
